<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="def_title">Title</string>
    <string name="add_note">add note</string>
    <string name="description">Description…</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="create_a_new_note">Create a new note</string>
    <string name="notes">Notes</string>
    <string name="search_note">Note…</string>
</resources>